--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,6 @@
                 </svg>
                 <h1>Transcodio</h1>
             </div>
-            <p class="subtitle">AI-Powered Audio Transcription</p>
         </header>
 
         <!-- Main Content -->
@@ -103,7 +102,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>Powered by OpenAI Whisper Large • Deployed on Modal GPU Infrastructure</p>
+            <p>Built by <a href="https://cifu.dev" target="_blank" rel="noopener noreferrer">cifu.dev</a></p>
         </footer>
     </div>
 
