--- a/static/index.html
+++ b/static/index.html
@@ -70,7 +70,21 @@
                                 <path d="M9 3 L9 12 M5 9 L9 13 L13 9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                                 <path d="M3 15 L15 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                             </svg>
-                            Download
+                            TXT
+                        </button>
+                        <button class="btn btn-secondary" id="downloadSrtBtn">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                <path d="M9 3 L9 12 M5 9 L9 13 L13 9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                                <path d="M3 15 L15 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                            </svg>
+                            SRT
+                        </button>
+                        <button class="btn btn-secondary" id="downloadVttBtn">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                <path d="M9 3 L9 12 M5 9 L9 13 L13 9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                                <path d="M3 15 L15 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                            </svg>
+                            VTT
                         </button>
                         <button class="btn btn-primary" id="newTranscriptionBtn">New Transcription</button>
                     </div>
