--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transcodio - AI Audio Transcription</title>
+    <title>Transcodio</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
