--- a/static/index.html
+++ b/static/index.html
@@ -58,13 +58,6 @@
                 <div class="results-header">
                     <h2>Transcription Results</h2>
                     <div class="results-actions">
-                        <button class="btn btn-secondary" id="copyBtn">
-                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                <rect x="5" y="5" width="10" height="10" stroke="currentColor" stroke-width="1.5" rx="1"/>
-                                <path d="M3 13 L3 3 L13 3" stroke="currentColor" stroke-width="1.5"/>
-                            </svg>
-                            Copy
-                        </button>
                         <button class="btn btn-secondary" id="downloadBtn">
                             <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
                                 <path d="M9 3 L9 12 M5 9 L9 13 L13 9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
@@ -109,7 +102,16 @@
 
                 <div class="transcription-content">
                     <div class="segments" id="segments"></div>
-                    <div class="full-text" id="fullText"></div>
+                    <div class="full-text-container">
+                        <div class="full-text" id="fullText"></div>
+                        <button class="btn btn-secondary copy-inside" id="copyBtn">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                <rect x="5" y="5" width="10" height="10" stroke="currentColor" stroke-width="1.5" rx="1"/>
+                                <path d="M3 13 L3 3 L13 3" stroke="currentColor" stroke-width="1.5"/>
+                            </svg>
+                            Copy
+                        </button>
+                    </div>
                 </div>
             </section>
         </main>
