--- a/static/index.html
+++ b/static/index.html
@@ -100,6 +100,10 @@
                     </span>
                 </div>
 
+                <div class="audio-player-container">
+                    <audio id="audioPlayer" controls></audio>
+                </div>
+
                 <div class="transcription-content">
                     <div class="segments" id="segments"></div>
                     <div class="full-text-container">
