--- a/static/index.html
+++ b/static/index.html
@@ -39,6 +39,18 @@
                     <p class="file-info">Supports MP3, WAV, M4A, FLAC, OGG • Max 100MB • Up to 10 minutes</p>
                     <input type="file" id="fileInput" accept="audio/*" hidden>
                 </div>
+                <div class="upload-options">
+                    <label class="checkbox-label">
+                        <input type="checkbox" id="enableDiarization">
+                        <span class="checkbox-custom"></span>
+                        <span class="checkbox-text">Identify speakers</span>
+                    </label>
+                    <label class="checkbox-label">
+                        <input type="checkbox" id="enableMinutes">
+                        <span class="checkbox-custom"></span>
+                        <span class="checkbox-text">Generate meeting minutes</span>
+                    </label>
+                </div>
             </section>
 
             <!-- Processing Section -->
@@ -115,6 +127,46 @@
                             </svg>
                             Copy
                         </button>
+                    </div>
+                </div>
+
+                <!-- Meeting Minutes Section -->
+                <div class="minutes-section hidden" id="minutesSection">
+                    <div class="minutes-header">
+                        <h3>Meeting Minutes</h3>
+                        <button class="btn btn-secondary" id="downloadMinutesBtn">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                <path d="M9 3 L9 12 M5 9 L9 13 L13 9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                                <path d="M3 15 L15 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                            </svg>
+                            Download Minutes
+                        </button>
+                    </div>
+                    <div class="minutes-loading hidden" id="minutesLoading">
+                        <div class="spinner-small"></div>
+                        <span>Generating meeting minutes...</span>
+                    </div>
+                    <div class="minutes-content" id="minutesContent">
+                        <div class="minutes-block">
+                            <h4>Executive Summary</h4>
+                            <p id="minutesSummary"></p>
+                        </div>
+                        <div class="minutes-block">
+                            <h4>Key Discussion Points</h4>
+                            <ul id="minutesKeyPoints"></ul>
+                        </div>
+                        <div class="minutes-block">
+                            <h4>Decisions Made</h4>
+                            <ul id="minutesDecisions"></ul>
+                        </div>
+                        <div class="minutes-block">
+                            <h4>Action Items</h4>
+                            <ul id="minutesActions" class="action-items-list"></ul>
+                        </div>
+                        <div class="minutes-block">
+                            <h4>Participants Mentioned</h4>
+                            <div id="minutesParticipants" class="participants-tags"></div>
+                        </div>
                     </div>
                 </div>
             </section>
