--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,9 +34,9 @@
                         <circle cx="32" cy="32" r="30" stroke="currentColor" stroke-width="2" opacity="0.3"/>
                         <path d="M32 20 L32 44 M20 32 L44 32" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
                     </svg>
-                    <h2>Drop your audio file here</h2>
-                    <p>or click to browse</p>
-                    <p class="file-info">Supports MP3, WAV, M4A, FLAC, OGG • Max 100MB • Up to 10 minutes</p>
+                    <h2>Arrastra tu archivo de audio aquí</h2>
+                    <p>o haz clic para seleccionar</p>
+                    <p class="file-info">Soporta MP3, WAV, M4A, FLAC, OGG • Máx 100MB • Hasta 60 minutos</p>
                     <input type="file" id="fileInput" accept="audio/*" hidden>
                 </div>
                 <div class="upload-options">
@@ -57,8 +57,8 @@
             <section class="processing-section hidden" id="processingSection">
                 <div class="processing-card">
                     <div class="spinner"></div>
-                    <h3>Transcribing your audio...</h3>
-                    <p class="processing-status" id="processingStatus">Uploading file...</p>
+                    <h3>Transcribiendo tu audio...</h3>
+                    <p class="processing-status" id="processingStatus">Subiendo archivo...</p>
                     <div class="progress-bar">
                         <div class="progress-fill" id="progressFill"></div>
                     </div>
@@ -68,7 +68,7 @@
             <!-- Results Section -->
             <section class="results-section hidden" id="resultsSection">
                 <div class="results-header">
-                    <h2>Transcription Results</h2>
+                    <h2>Resultados de Transcripción</h2>
                     <div class="results-actions">
                         <button class="btn btn-secondary" id="downloadBtn">
                             <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -91,7 +91,7 @@
                             </svg>
                             VTT
                         </button>
-                        <button class="btn btn-primary" id="newTranscriptionBtn">New Transcription</button>
+                        <button class="btn btn-primary" id="newTranscriptionBtn">Nueva Transcripción</button>
                     </div>
                 </div>
 
@@ -164,7 +164,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>Built by <a href="https://cifu.dev" target="_blank" rel="noopener noreferrer">cifu.dev</a></p>
+            <p>Desarrollado por <a href="https://cifu.dev" target="_blank" rel="noopener noreferrer">cifu.dev</a></p>
         </footer>
     </div>
 
