higgs 1, fish audio

--- a/static/index.html
+++ b/static/index.html
@@ -265,6 +265,7 @@
                         <select id="ttsModelSelect" class="form-select">
                             <option value="qwen" selected>Qwen3-TTS (Rapido, 1.7B)</option>
                             <option value="higgs">Higgs Audio V2 (Alta calidad, 3B)</option>
+                            <option value="fish">Fish Audio S1 (Mejor calidad, 4B)</option>
                         </select>
                         <p class="form-hint" id="modelHint">Rapido y buena calidad para la mayoria de casos</p>
                     </div>
