--- a/static/index.html
+++ b/static/index.html
@@ -274,15 +274,15 @@
                     <div class="voice-clone-form-group">
                         <label class="form-label" for="languageSelect">Idioma</label>
                         <select id="languageSelect" class="form-select">
-                            <option value="Spanish" selected>Espanol</option>
-                            <option value="English">Ingles</option>
+                            <option value="Spanish" selected>Español</option>
+                            <option value="English">Inglés</option>
                             <option value="Chinese">Chino</option>
-                            <option value="Japanese">Japones</option>
+                            <option value="Japanese">Japonés</option>
                             <option value="Korean">Coreano</option>
-                            <option value="German">Aleman</option>
-                            <option value="French">Frances</option>
+                            <option value="German">Alemán</option>
+                            <option value="French">Francés</option>
                             <option value="Russian">Ruso</option>
-                            <option value="Portuguese">Portugues</option>
+                            <option value="Portuguese">Portugués</option>
                             <option value="Italian">Italiano</option>
                         </select>
                     </div>
