--- a/static/index.html
+++ b/static/index.html
@@ -248,7 +248,7 @@
 
                     <!-- Reference Text -->
                     <div class="voice-clone-form-group">
-                        <label class="form-label" for="refTextInput">Transcripcion del Audio de Referencia</label>
+                        <label class="form-label" for="refTextInput">Transcripción del Audio de Referencia</label>
                         <textarea id="refTextInput" class="form-textarea" placeholder="Escribe exactamente lo que dice el audio de referencia..." rows="3"></textarea>
                     </div>
 
@@ -263,11 +263,11 @@
                     <div class="voice-clone-form-group">
                         <label class="form-label" for="ttsModelSelect">Modelo TTS</label>
                         <select id="ttsModelSelect" class="form-select">
-                            <option value="qwen" selected>Qwen3-TTS (Rapido, 1.7B)</option>
+                            <option value="qwen" selected>Qwen3-TTS (Rápido, 1.7B)</option>
                             <option value="higgs">Higgs Audio V2 (Alta calidad, 3B)</option>
                             <option value="fish">Fish Audio S1 (Mejor calidad, 4B)</option>
                         </select>
-                        <p class="form-hint" id="modelHint">Rapido y buena calidad para la mayoria de casos</p>
+                        <p class="form-hint" id="modelHint">Rápido y buena calidad para la mayoría de casos</p>
                     </div>
 
                     <!-- Language Selector -->
@@ -318,7 +318,7 @@
                             </svg>
                             Descargar WAV
                         </button>
-                        <button class="btn btn-primary" id="newVoiceCloneBtn">Nueva Clonacion</button>
+                        <button class="btn btn-primary" id="newVoiceCloneBtn">Nueva Clonación</button>
                     </div>
                 </div>
 
