--- a/static/index.html
+++ b/static/index.html
@@ -265,6 +265,7 @@
                         <select id="ttsModelSelect" class="form-select">
                             <option value="qwen" selected>Qwen3-TTS (Rápido, 1.7B)</option>
                             <option value="higgs">Higgs Audio V2 (Alta calidad, 3B)</option>
+                            <option value="neutts">NeuTTS Nano (Ultra rápido, 120M)</option>
                         </select>
                         <p class="form-hint" id="modelHint">Rápido y buena calidad para la mayoría de casos</p>
                     </div>
