--- a/static/index.html
+++ b/static/index.html
@@ -16,8 +16,8 @@
                     <path d="M12 10 L12 22 L20 16 Z" fill="url(#gradient)"/>
                     <defs>
                         <linearGradient id="gradient" x1="0" y1="0" x2="32" y2="32">
-                            <stop offset="0%" stop-color="#667eea"/>
-                            <stop offset="100%" stop-color="#764ba2"/>
+                            <stop offset="0%" stop-color="#9333ea"/>
+                            <stop offset="100%" stop-color="#6d28d9"/>
                         </linearGradient>
                     </defs>
                 </svg>
